--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,16 @@
   text-align: center;
 }
 
-.App-logo {
+body {
+  background-color: #f5f5f5;
+  margin: 0;
+
+  font-size: 1.1rem; /* lite större än standard */
+  line-height: 1.6; /* mer luft mellan raderna */
+  color: #222; /* mörkgrå istället för svart = mindre kontrasttrötthet */
+}
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
