--- a/src/pages/Post.css
+++ b/src/pages/Post.css
@@ -49,6 +49,7 @@
   border-radius: 15px;
   object-fit: contain;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .single-post-footer * {
