--- a/src/components/CommentSection.css
+++ b/src/components/CommentSection.css
@@ -36,6 +36,19 @@
   display: flex;
   flex-direction: column;
   width: 60%;
+  position: relative;
+}
+
+.delete-comment {
+  position: absolute;
+  right: 7px;
+  top: 7px;
+  width: 30px;
+  height: 30px;
+}
+
+.delete-comment:hover {
+  opacity: 0.8;
 }
 
 .comment p {
