--- a/src/pages/CreatePost.css
+++ b/src/pages/CreatePost.css
@@ -40,6 +40,13 @@
   background-color: lightgray;
 }
 
+.preview-img {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
 @media (max-width: 1500px) {
   .create-post-form {
     width: 40%;
@@ -55,5 +62,11 @@
 @media (max-width: 770px) {
   .create-post-form {
     width: 70%;
+  }
+}
+
+@media (max-width: 500px) {
+  .create-post-form {
+    width: 80%;
   }
 }
